Updates to my local copy

--- a/templates/dnd5e/parts/header/identity.hbs
+++ b/templates/dnd5e/parts/header/identity.hbs
@@ -21,7 +21,6 @@
 </div>
 {{#unless flags.hide-profile-image}}
 	<figure class="profile-image">
-		<img src="{{actor.img}}" data-edit="img"
-			title="{{actor.name}}{{#if flags.editing}} - {{ localize "MOBLOKS5E.EditHint" }}{{/if}}">
+		<img src="{{actor.img}}" data-edit="img" title="{{actor.name}} | {{data.details.source}}">
 	</figure>
 {{/unless}}
