--- a/templates/dnd5e/parts/damageRoll.hbs
+++ b/templates/dnd5e/parts/damageRoll.hbs
@@ -1,5 +1,3 @@
-<span class="attack-damage" 
-	data-roll-flavor="{{localize 'DND5E.Damage'}}: {{name}}"
-	data-roll-formula="{{formula}}">
-	{{~text~}}
-</span>
+<span>{{~#if versatile}} or {{/if~}}{{average}} (</span><span class="attack-damage"
+data-roll-flavor="<strong>{{name}} Damage{{#if type}}: {{type}}{{/if}}</strong>"
+data-roll-formula="{{formula}}"><span class="fas fa-dice-d20" style="color: #000000;">&nbsp;</span>{{formula}}</span><span>) {{#if versatile}} damage if used with two hands{{~else}}{{type}}{{~/if~}}</span>
