fixed space after attack roll icon

--- a/templates/dnd5e/parts/main/attack.hbs
+++ b/templates/dnd5e/parts/main/attack.hbs
@@ -19,7 +19,7 @@
 				data-roll-flavor="<strong>{{item.name}} Attack</strong>" 
 				data-roll-formula="1d20 + {{item.tohit}}">
 				<span class="fas fa-dice-d20" style="color: #000000;">&nbsp;</span>
-				{{item.description.tohit~}}
+				{{~item.description.tohit~}}
 			</span>{{ localize "MOBLOKS5E.Comma" }}
 			<span>
 				{{ item.description.range }}{{ localize "MOBLOKS5E.Comma" }}
