--- a/templates/dnd5e/parts/damageRoll.hbs
+++ b/templates/dnd5e/parts/damageRoll.hbs
@@ -1,3 +1,3 @@
 <span>{{~#if versatile}} or {{/if~}}{{average}} (</span><span class="attack-damage"
-data-roll-flavor="<strong>{{name}} Damage{{#if type}}: {{type}}{{/if}}</strong>"
-data-roll-formula="{{formula}}"><span class="fas fa-dice-d20" style="color: #000000;">&nbsp;</span>{{formula}}</span><span>) {{#if versatile}} damage if used with two hands{{~else}}{{type}}{{~/if~}}</span>
+data-roll-flavor="{{name}} - Damage Roll{{#if type}} ({{type}}){{/if}}"
+data-roll-formula="{{formula}}">{{formula~}}</span><span>) {{#if versatile}} damage if used with two hands{{~else}}{{type}}{{~/if~}}</span>
