Added Dice Icons to Rolls

--- a/templates/dnd5e/parts/main/attack.hbs
+++ b/templates/dnd5e/parts/main/attack.hbs
@@ -18,6 +18,7 @@
 			<span class="attack-bonus" 
 				data-roll-flavor="{{item.name}} - Attack Roll" 
 				data-roll-formula="1d20 + {{item.tohit}}">
+				<span class="fas fa-dice-d20">&nbsp;</span>
 				{{~item.description.tohit~}}
 			</span>{{ localize "MOBLOKS5E.Comma" }}
 			<span>
