--- a/templates/dnd5e/parts/damageRoll.hbs
+++ b/templates/dnd5e/parts/damageRoll.hbs
@@ -1,3 +1,3 @@
 <span>{{~#if versatile}} or {{/if~}}{{average}} (</span><span class="attack-damage"
 data-roll-flavor="{{name}} - Damage Roll{{#if type}} ({{type}}){{/if}}"
-data-roll-formula="{{formula}}">{{formula~}}</span><span>) {{#if versatile}} damage if used with two hands{{~else}}{{moblok-toLowerCase type}}{{~/if~}}</span>
+data-roll-formula="{{formula}}"><span class="fas fa-dice-d20">&nbsp;</span>{{formula~}}</span><span>) {{#if versatile}} damage if used with two hands{{~else}}{{moblok-toLowerCase type}}{{~/if~}}</span>
