--- a/templates/dnd5e/parts/header/attributes1.hbs
+++ b/templates/dnd5e/parts/header/attributes1.hbs
@@ -12,7 +12,7 @@
 			<span class="attr-value"
 				data-field-key="data.attributes.ac.text"
 				data-dtype="String"
-				placeholder=""
+				placeholder="Armor Type"
 				contenteditable="{{flags.editing}}">{{data.attributes.ac.text}}</span>{{~#if data.attributes.ac.text}}){{~/if~}}
 		</span>
 	</li>
